Changelog
=========

1.0b3 (unreleased)
------------------

* In lieu of real image scaling, at least make sure the thumbnail used on the
  image input widget has the correct aspect ratio.  Fixes
  http://code.google.com/p/dexterity/issues/detail?id=77
  [davisagli]

1.0b2 (2009-09-13)
------------------

* Make the widget more robust to validation errors elsewhere in the form.
  Fixes http://code.google.com/p/dexterity/issues/detail?id=76.
  [optilude]

1.0b1 (2009-08-02)
------------------

* Add option to remove files or images. This fixes dexterity issue #71:
  http://code.google.com/p/dexterity/issues/detail?id=71
  [wichert]


1.0a1 (2009-04-17)
------------------

* Initial release